--- a/static/assets/css/custom.css
+++ b/static/assets/css/custom.css
@@ -186,6 +186,11 @@ p {
 .w-100 {
     width: 100%;
 }
+@media (max-width: 1200px) {
+    img.mb-4-small {
+        margin-bottom: 4rem !important;
+    }
+}
 @media (max-width: 900px) {
     .mb-4-small {
         margin-bottom: 4rem !important;
